$Id$

Version 1.2.0 (27 Sep 2008)
 - Apply Patch [ 2086918 ] icalendar with multi byte
 - Apply Patch [ 2129844 ] Missing space in day view
 - Apply Patch [ 2126058 ] Color for today's event in week.php
 - Apply Patch [ 2126269 ] Norwegian translation update
 - Apply Patch [ 2117687 ] German updated translation
 - Apply Patch [ 2126001 ] Fixes for upgrade-postgres.sql
 - Add Portuguese_BR_utf8 to includes/translate.php
 - Fix typo. Bug report [2122876] syntax error at "update_translation.pl" update_translation.pl
 - Patch [ 1986759 ] Incorrect date shift logic in view_entry.php
 - Apply PATCH [ 1980001 ] Portuguese_BR translation
 - Fixed NUC URL in edit_nonusers.php. Removed hyperlink and added _NUC_
 - Updated Polish translation and added Polish_UTF-8 format
 - Fixed problem with ByMonthDay not being saved
 - Fixed bug [ 1948133 ] Weekly repeating events appear on wrong day in iCal
 - Fixed bug [ 1814160 ] CVS 1.1.7 - advanced search in non user calendar
 - Fixed bug [ 1842507 ] Reminders being sent out 1 day early
 - Fixed bug [ 1748124 ] reminder email has wrong date
 - Fixed bug [ 1833136 ] option Display small months
 - Fixed bug [ 1737128 ] From notification to "not authorized"
 - Fixed bug [ 1948086 ] File Attachments
 - Fixed bug [ 1939275 ] getting error at security_audit.php
 - Fixed bug [ 1935981 ] icalclient.php delivers faulty data
 - Fixed bug [ 1934763 ] upcoming events - link is not authorized
 - Convert public to __public__ in rss.php
 - Fixed bug [ 1901746 ] 12:am ending time
 - Fixed bug [ 1912636 ] 1.2b1 import error - international chars
 - Fixed bug [ 1912638 ] 1.2b1 import error - untimed events
 - Fixed bug [ 1931360 ] 1.2.b1 Mon-Sun Repeating Weekly Appt
 - Fixed bug [ 1912639 ] 1.2b1 import error - remote calendars
 - Fixed bug [ 1933105 ] missing events in monthly view (side by side)
 - Fixed bug [ 1913340 ] end date of a repeating entry won't be saved at 1.2b1
 - Fixed bug [ 1922041 ] upcoming.php