@@ -1,6 +1,7 @@
 $Id$
 
 Version 1.2.0 (27 Sep 2008)
+ - Fix typos. Bug Report [ 2138019 ] Missing </tr> in view_entry.php
  - Apply Patch [ 2086918 ] icalendar with multi byte
  - Apply Patch [ 2129844 ] Missing space in day view
  - Apply Patch [ 2126058 ] Color for today's event in week.php
